src/test/deca/context/valid/created/method_int_to_float.deca
//Description :
// Test d'une déclaration de deux méthodes avec le même nom
//
// Resultats :
// Erreur


class Premiere {

    void printX(float x){
    print(x);
    }
}

{
Premiere prem = new Premiere();
int a = 3;
prem.printX(a);
}
